# neuro-emote-guess

./: README.md
backend/: Cargo.toml  emotes.graphql
backend/generate_key/: Cargo.toml
backend/generate_key/src/: main.rs
backend/server/: Cargo.toml  schema.json
backend/server/src/: data.rs  handler.rs  jwt.rs  lib.rs  main.rs  seventv.rs  twitch.rs
backend/server/src/models/: requests.rs  responses.rs
backend/src/: data.rs  handler.rs  lib.rs  main.rs  seventv.rs
backend/src/models/: requests.rs  responses.rs
frontend/: eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: app.css
frontend/src/lib/: Box.svelte  BoxState.ts  Emote.ts  Game.ts  GameModels.ts  GameSocket.ts  GameState.svelte.ts  Scoreboard.svelte  Timer.svelte  UserList.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  GameOver.svelte  GameScreen.svelte  RoomScreen.svelte
frontend/src/routes/game/: +page.svelte  GameScreen.svelte
frontend/src/routes/login/: +page.svelte
