[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
futures-util = "0.3.31"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
uuid = { version = "1.17.0", features = ["v4"] }
warp = "0.3.7"
