[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
cached = { version = "0.55.1", features = ["async"] }
env_logger = "0.11.8"
futures-util = "0.3.31"
graphql_client = { version = "0.14.0", features = ["reqwest"] }
rand = "0.9.1"
rand_chacha = "0.9.0"
reqwest = { version = "0.12.18", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
uuid = { version = "1.17.0", features = ["v4"] }
warp = "0.3.7"
